{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "71c4a060-bc66-4757-bddf-0ed39c7a98fd",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5b874d78-741a-4534-97c3-4c8c4c1f606c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenInventory",
                    "type": "Button",
                    "id": "18a27ce4-2303-4a40-abe2-8ad140e73d9b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "0dc8baa6-e156-4601-b828-5e9b2d1704d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "a609e46b-bb7e-4f9d-8e52-321a159cecae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "70802a88-4995-41a5-bea0-7f14ae5c5720",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveLeftKeyboard",
                    "type": "Button",
                    "id": "12a88b2d-b38a-4f86-a937-8ffd935974f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRightKeyboard",
                    "type": "Button",
                    "id": "72d2d07d-f5fa-43b8-903d-d4884596133e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveGamepad",
                    "type": "Value",
                    "id": "c6159804-cda5-4805-9556-954b6ff3d025",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f7033797-eb27-43a0-89ae-665903e040af",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "839dc425-0caf-4cea-9f2f-338bf97b0212",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b30eee22-b46a-4b42-b9ee-654e9173ee2a",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9866119d-aa36-4536-8486-faccb9843d8f",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1b21d66-d451-4ebe-bf57-68c2ac69c905",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a507a343-2726-4d20-a91b-5b27d7bd012e",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34e63624-fd6b-4c60-83e1-415bbb73ee3f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f901822b-9f42-45fc-92e1-c751e6551baa",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76cac7e7-e15e-4176-b613-fa5c69ee107f",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78d6ddf0-e475-4879-8365-22ce90ba65fc",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79059eae-b8c3-4942-a9c1-a4fb61610ee4",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveGamepad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd95792f-f56f-4a30-a2ab-1ababdc9570f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1c4182c-2708-47e4-815b-a66b203dddfb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRightKeyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}